[gd_scene load_steps=14 format=3 uid="uid://clua6dhntsi88"]

[ext_resource type="Texture2D" uid="uid://b1xkhwsj6j7pf" path="res://New Piskel-1.png.png" id="1_2wlih"]
[ext_resource type="TileSet" uid="uid://berlglirvxm1s" path="res://node_2d.tres" id="1_er4y6"]
[ext_resource type="Texture2D" uid="uid://uf8h4w2as5ma" path="res://New Piskel (3)/sprite_07.png" id="2_66tk6"]
[ext_resource type="Script" path="res://Start.gd" id="3_ieqmv"]
[ext_resource type="FontFile" uid="uid://ctn1lsu6sk0rv" path="res://New Piskel (3)/VCR_OSD_MONO_1.001.ttf" id="4_3rb1f"]
[ext_resource type="Texture2D" uid="uid://te7hwnvyl08u" path="res://New Piskel (10)/sprite_1.png" id="5_x2ls3"]
[ext_resource type="Texture2D" uid="uid://lx8gcid1bjyl" path="res://New Piskel (10)/sprite_2.png" id="6_gbqte"]
[ext_resource type="Texture2D" uid="uid://c02053i13nkfm" path="res://New Piskel (10)/sprite_3.png" id="7_hskbi"]
[ext_resource type="Texture2D" uid="uid://2lu1veyr008c" path="res://New Piskel (10)/sprite_4.png" id="8_am8v7"]
[ext_resource type="Texture2D" uid="uid://dq8hoqwa38pof" path="res://New Piskel (10)/sprite_0.png" id="9_hogf0"]
[ext_resource type="Texture2D" uid="uid://dyvu60r2egrua" path="res://New Piskel (3)/sprite_00.png" id="10_4t6hp"]
[ext_resource type="Texture2D" uid="uid://bt6i5ejwayre5" path="res://New Piskel (6)/sprite_00.png" id="11_rbw0b"]
[ext_resource type="Texture2D" uid="uid://ch0rgpvd0fqje" path="res://New Piskel (9)/sprite_00.png" id="12_dxm8q"]

[node name="Node2D" type="Node2D"]

[node name="Sprite07" type="Sprite2D" parent="."]
z_index = 4
y_sort_enabled = true
position = Vector2(5686, 1119)
scale = Vector2(1.50293, 1.18555)
texture = ExtResource("1_2wlih")
script = ExtResource("3_ieqmv")

[node name="TileMap" type="TileMap" parent="Sprite07"]
position = Vector2(-3783.28, -943.868)
scale = Vector2(0.665367, 0.843493)
tile_set = ExtResource("1_er4y6")
format = 2
layer_0/tile_data = PackedInt32Array(0, 589824, 7, 65536, 196608, 8, 131072, 196608, 8, 196608, 589824, 7, 262144, 196608, 8, 327680, 524288, 6, 1, 589824, 7, 65537, 524288, 6, 131073, 524288, 6, 196609, 65536, 8, 262145, 65536, 8, 327681, 524288, 6, 2, 524288, 6, 65538, 589824, 7, 131074, 589824, 7, 196610, 589824, 7, 262146, 524288, 6, 327682, 524288, 6, 3, 196608, 8, 65539, 65536, 8, 131075, 524288, 6, 196611, 524288, 6, 262147, 524288, 6, 327683, 589824, 7, 4, 196608, 8, 65540, 589824, 7, 131076, 196608, 8, 196612, 589824, 7, 262148, 589824, 7, 327684, 589824, 7, 5, 524288, 6, 65541, 589824, 7, 131077, 589824, 7, 196613, 65536, 8, 262149, 196608, 8, 327685, 196608, 8, 6, 524288, 6, 65542, 524288, 6, 131078, 589824, 7, 196614, 65536, 8, 262150, 524288, 6, 327686, 65536, 8, 7, 196608, 8, 65543, 524288, 6, 131079, 196608, 8, 196615, 524288, 6, 262151, 524288, 6, 327687, 524288, 6, 8, 524288, 6, 65544, 589824, 7, 131080, 196608, 8, 196616, 65536, 8, 262152, 589824, 7, 327688, 524288, 6, 9, 589824, 7, 65545, 524288, 6, 131081, 196608, 8, 196617, 65536, 8, 262153, 196608, 8, 327689, 196608, 8, 10, 589824, 7, 65546, 589824, 7, 131082, 589824, 7, 196618, 524288, 6, 262154, 589824, 7, 327690, 196608, 8, 11, 196608, 8, 65547, 65536, 8, 131083, 524288, 6, 196619, 65536, 8, 262155, 65536, 8, 327691, 589824, 7, 12, 65536, 8, 65548, 65536, 8, 131084, 524288, 6, 196620, 65536, 8, 262156, 589824, 7, 327692, 196608, 8, 13, 196608, 8, 65549, 524288, 6, 131085, 589824, 7, 196621, 196608, 8, 262157, 65536, 8, 327693, 589824, 7, 14, 524288, 6, 65550, 589824, 7, 131086, 196608, 8, 196622, 524288, 6, 262158, 589824, 7, 327694, 65536, 8, 393217, 589824, 7, 458753, 589824, 7, 393218, 196608, 8, 458754, 524288, 6, 393219, 65536, 8, 458755, 524288, 6, 393220, 65536, 8, 458756, 65536, 8, 393221, 589824, 7, 458757, 196608, 8, 393222, 65536, 8, 458758, 589824, 7, 393223, 65536, 8, 458759, 65536, 8, 393224, 524288, 6, 458760, 524288, 6, 393216, 589824, 7, 458752, 589824, 7, 524288, 196608, 8, 589824, 524288, 6, 655360, 196608, 8, 720896, 524288, 6, 786432, 65536, 8, 851968, 196608, 8, 524289, 524288, 6, 589825, 196608, 8, 655361, 524288, 6, 720897, 196608, 8, 786433, 196608, 8, 851969, 524288, 6, 524290, 524288, 6, 589826, 65536, 8, 655362, 589824, 7, 720898, 524288, 6, 786434, 196608, 8, 851970, 65536, 8, 524291, 65536, 8, 589827, 524288, 6, 655363, 589824, 7, 720899, 524288, 6, 786435, 196608, 8, 851971, 65536, 8, 524292, 196608, 8, 589828, 589824, 7, 655364, 589824, 7, 720900, 524288, 6, 786436, 196608, 8, 851972, 589824, 7, 524293, 196608, 8, 589829, 65536, 8, 655365, 589824, 7, 720901, 589824, 7, 786437, 589824, 7, 851973, 65536, 8, 524294, 524288, 6, 589830, 589824, 7, 655366, 196608, 8, 720902, 196608, 8, 786438, 589824, 7, 851974, 65536, 8, 524295, 196608, 8, 589831, 524288, 6, 655367, 524288, 6, 720903, 524288, 6, 786439, 589824, 7, 851975, 65536, 8, 524296, 196608, 8, 589832, 589824, 7, 655368, 196608, 8, 720904, 524288, 6, 786440, 589824, 7, 851976, 589824, 7, 393225, 589824, 7, 458761, 196608, 8, 524297, 589824, 7, 589833, 65536, 8, 655369, 589824, 7, 720905, 65536, 8, 786441, 589824, 7, 851977, 65536, 8, 393226, 65536, 8, 458762, 589824, 7, 524298, 65536, 8, 589834, 589824, 7, 655370, 524288, 6, 720906, 65536, 8, 786442, 589824, 7, 851978, 589824, 7, 393227, 524288, 6, 458763, 65536, 8, 524299, 524288, 6, 589835, 196608, 8, 655371, 589824, 7, 720907, 65536, 8, 786443, 524288, 6, 851979, 589824, 7, 393228, 196608, 8, 458764, 65536, 8, 524300, 65536, 8, 589836, 524288, 6, 655372, 524288, 6, 720908, 589824, 7, 786444, 524288, 6, 851980, 196608, 8, 393229, 196608, 8, 458765, 589824, 7, 524301, 65536, 8, 589837, 589824, 7, 655373, 589824, 7, 720909, 589824, 7, 786445, 196608, 8, 851981, 65536, 8, 393230, 65536, 8, 458766, 589824, 7, 524302, 65536, 8, 589838, 589824, 7, 655374, 589824, 7, 720910, 65536, 8, 786446, 524288, 6, 851982, 196608, 8, 15, 589824, 7, 65551, 589824, 7, 131087, 65536, 8, 196623, 196608, 8, 262159, 65536, 8, 327695, 196608, 8, 393231, 524288, 6, 458767, 524288, 6, 524303, 196608, 8, 589839, 524288, 6, 655375, 196608, 8, 720911, 196608, 8, 786447, 589824, 7, 851983, 524288, 6, 16, 524288, 6, 65552, 65536, 8, 131088, 524288, 6, 196624, 196608, 8, 262160, 65536, 8, 327696, 196608, 8, 393232, 65536, 8, 458768, 196608, 8, 524304, 589824, 7, 589840, 196608, 8, 655376, 524288, 6, 720912, 65536, 8, 786448, 65536, 8, 851984, 196608, 8, 17, 196608, 8, 65553, 65536, 8, 131089, 589824, 7, 196625, 196608, 8, 262161, 524288, 6, 327697, 65536, 8, 393233, 524288, 6, 458769, 589824, 7, 524305, 196608, 8, 589841, 524288, 6, 655377, 524288, 6, 720913, 65536, 8, 786449, 589824, 7, 851985, 65536, 8, 18, 196608, 8, 65554, 589824, 7, 131090, 524288, 6, 196626, 196608, 8, 262162, 196608, 8, 327698, 524288, 6, 393234, 589824, 7, 458770, 65536, 8, 524306, 65536, 8, 589842, 524288, 6, 655378, 524288, 6, 720914, 524288, 6, 786450, 589824, 7, 851986, 524288, 6, 19, 196608, 8, 65555, 524288, 6, 131091, 524288, 6, 196627, 589824, 7, 262163, 589824, 7, 327699, 589824, 7, 393235, 196608, 8, 458771, 196608, 8, 524307, 589824, 7, 589843, 524288, 6, 655379, 196608, 8, 720915, 524288, 6, 786451, 589824, 7, 851987, 65536, 8, 20, 65536, 8, 65556, 196608, 8, 131092, 65536, 8, 196628, 65536, 8, 262164, 589824, 7, 327700, 65536, 8, 393236, 524288, 6, 458772, 524288, 6, 524308, 524288, 6, 589844, 65536, 8, 655380, 589824, 7, 720916, 196608, 8, 786452, 524288, 6, 851988, 589824, 7, 21, 65536, 8, 65557, 65536, 8, 131093, 524288, 6, 196629, 589824, 7, 262165, 65536, 8, 327701, 589824, 7, 393237, 196608, 8, 458773, 524288, 6, 524309, 524288, 6, 589845, 589824, 7, 655381, 524288, 6, 720917, 65536, 8, 786453, 65536, 8, 851989, 196608, 8, 22, 196608, 8, 65558, 196608, 8, 131094, 196608, 8, 196630, 65536, 8, 262166, 589824, 7, 327702, 196608, 8, 393238, 589824, 7, 458774, 196608, 8, 524310, 524288, 6, 589846, 196608, 8, 655382, 589824, 7, 720918, 196608, 8, 786454, 524288, 6, 851990, 196608, 8)

[node name="Label" type="Label" parent="Sprite07"]
z_index = 1
anchors_preset = -1
anchor_left = -0.0255327
anchor_top = -0.619902
anchor_right = -0.866355
anchor_bottom = 0.00118971
offset_left = -2838.26
offset_top = 418.609
offset_right = -65.2572
offset_bottom = 1598.61
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3rb1f")
theme_override_font_sizes/font_size = 65
text = "How to Play

WASD/Arrow Keys - Movement

Space/I - Continue Interaction

Get back home by gaining money and reputation.
Solve complex problems that delve to the mental
and moral standings of the player. Make sure to
pick the right choices and the right players in
order to sucessfully finish this game!

Good Luck and have fun!"
horizontal_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="Sprite07"]
offset_left = -253.172
offset_top = 374.089
offset_right = 778.828
offset_bottom = 894.089
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.647059)
theme_override_fonts/font = ExtResource("4_3rb1f")
theme_override_font_sizes/font_size = 200
text = "START"
icon = ExtResource("2_66tk6")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="Sprite07"]
offset_left = -253.172
offset_top = 674.089
offset_right = 778.828
offset_bottom = 1194.09
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.647059)
theme_override_fonts/font = ExtResource("4_3rb1f")
theme_override_font_sizes/font_size = 125
text = "How to Play"
icon = ExtResource("2_66tk6")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="Sprite07"]
offset_left = -253.172
offset_top = 974.088
offset_right = 778.828
offset_bottom = 1494.09
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.647059)
theme_override_fonts/font = ExtResource("4_3rb1f")
theme_override_font_sizes/font_size = 200
text = "Credits"
icon = ExtResource("2_66tk6")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Sprite07"]
z_index = 1
offset_left = 898.911
offset_top = -168.0
offset_right = 3671.91
offset_bottom = 1012.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3rb1f")
theme_override_font_sizes/font_size = 100
text = "Credits:

Game Assets: Rian Thomas

Game Design: Rian Thomas

Sound Designer: Rian Thomas

Game Engine: Godot

Programming Language: GDScript

Music/Sounds: BeepBox"
horizontal_alignment = 1

[node name="Button5" type="Button" parent="Sprite07"]
anchors_preset = -1
anchor_left = 0.000223756
anchor_top = -0.000186682
anchor_right = 0.000223756
anchor_bottom = -0.000186682
offset_left = -3186.01
offset_top = 20.3393
offset_right = -2154.01
offset_bottom = 540.339
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.647059)
theme_override_fonts/font = ExtResource("4_3rb1f")
theme_override_font_sizes/font_size = 200
text = "⮕"
icon = ExtResource("2_66tk6")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button6" type="Button" parent="Sprite07"]
anchors_preset = -1
anchor_left = 0.000223756
anchor_top = -0.000186682
anchor_right = 0.000223756
anchor_bottom = -0.000186682
offset_left = 2671.22
offset_top = -222.586
offset_right = 3703.22
offset_bottom = 297.414
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.647059)
theme_override_fonts/font = ExtResource("4_3rb1f")
theme_override_font_sizes/font_size = 200
text = "⮕"
icon = ExtResource("2_66tk6")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Sprite1" type="Sprite2D" parent="Sprite07"]
z_index = 4
position = Vector2(256.12, 5563.97)
scale = Vector2(18.9004, 4.76562)
texture = ExtResource("5_x2ls3")

[node name="Sprite2" type="Sprite2D" parent="Sprite07/Sprite1"]
z_index = 10
y_sort_enabled = true
position = Vector2(-253.832, -83.4409)
scale = Vector2(0.110158, 0.436885)
texture = ExtResource("6_gbqte")

[node name="Sprite3" type="Sprite2D" parent="Sprite07/Sprite1"]
z_index = 10
y_sort_enabled = true
position = Vector2(-218.381, 48.7743)
scale = Vector2(0.0937273, 0.371721)
texture = ExtResource("7_hskbi")

[node name="Sprite4" type="Sprite2D" parent="Sprite07/Sprite1"]
z_index = 10
y_sort_enabled = true
position = Vector2(-287.451, -158.664)
scale = Vector2(0.112432, 0.445902)
texture = ExtResource("8_am8v7")

[node name="Sprite5" type="Sprite2D" parent="Sprite07/Sprite1"]
z_index = 10
y_sort_enabled = true
position = Vector2(-294.422, 8.95047)
scale = Vector2(0.110158, 0.436885)
texture = ExtResource("6_gbqte")

[node name="Sprite6" type="Sprite2D" parent="Sprite07/Sprite1"]
z_index = 10
y_sort_enabled = true
position = Vector2(-324.591, -95.8305)
scale = Vector2(0.0937273, 0.371721)
texture = ExtResource("7_hskbi")

[node name="Sprite7" type="Sprite2D" parent="Sprite07/Sprite1"]
z_index = 10
y_sort_enabled = true
position = Vector2(-343.601, 51.0752)
scale = Vector2(0.112432, 0.445902)
texture = ExtResource("8_am8v7")

[node name="Sprite0" type="Sprite2D" parent="Sprite07"]
z_index = 17
position = Vector2(-33.3141, 5485.53)
scale = Vector2(1.90319, 2.26161)
texture = ExtResource("9_hogf0")

[node name="Button7" type="Button" parent="Sprite07"]
offset_left = -733.234
offset_top = 3567.12
offset_right = 298.766
offset_bottom = 4087.12
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.647059)
theme_override_fonts/font = ExtResource("4_3rb1f")
theme_override_font_sizes/font_size = 150
text = "Adam"
icon = ExtResource("2_66tk6")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Sprite00" type="Sprite2D" parent="Sprite07"]
z_index = 17
y_sort_enabled = true
position = Vector2(-466.256, 2954.75)
scale = Vector2(0.663742, 1.83031)
texture = ExtResource("10_4t6hp")

[node name="Sprite01" type="Sprite2D" parent="Sprite07"]
z_index = 17
y_sort_enabled = true
position = Vector2(437.026, 2954.75)
scale = Vector2(0.663742, 1.83031)
texture = ExtResource("10_4t6hp")

[node name="Button8" type="Button" parent="Sprite07"]
offset_left = 176.988
offset_top = 3567.3
offset_right = 1208.99
offset_bottom = 4087.3
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0.647059)
theme_override_fonts/font = ExtResource("4_3rb1f")
theme_override_font_sizes/font_size = 150
text = "Travis"
icon = ExtResource("2_66tk6")
flat = true
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="Sprite07"]
z_index = 5
y_sort_enabled = true
offset_left = -329.357
offset_top = 3465.06
offset_right = 260.643
offset_bottom = 3553.06
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3rb1f")
theme_override_font_sizes/font_size = 100
text = "Choose one"

[node name="Sprite02" type="Sprite2D" parent="Sprite07"]
z_index = 19
y_sort_enabled = true
position = Vector2(-473.076, 2954.75)
scale = Vector2(1.22677, 1.55519)
texture = ExtResource("11_rbw0b")

[node name="Sprite03" type="Sprite2D" parent="Sprite07"]
z_index = 19
y_sort_enabled = true
position = Vector2(442.134, 2954.75)
scale = Vector2(1.22677, 1.55519)
texture = ExtResource("12_dxm8q")

[node name="Label4" type="Label" parent="Sprite07"]
offset_left = -528.967
offset_top = 217.62
offset_right = 533.033
offset_bottom = 305.62
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3rb1f")
theme_override_font_sizes/font_size = 100
text = "Puzzle of the Soul"

[connection signal="pressed" from="Sprite07/Button2" to="Sprite07" method="_on_button_2_pressed"]
[connection signal="pressed" from="Sprite07/Button3" to="Sprite07" method="_on_button_3_pressed"]
[connection signal="pressed" from="Sprite07/Button4" to="Sprite07" method="_on_button_4_pressed"]
[connection signal="pressed" from="Sprite07/Button5" to="Sprite07" method="_on_button_5_pressed"]
[connection signal="pressed" from="Sprite07/Button6" to="Sprite07" method="_on_button_6_pressed"]
[connection signal="pressed" from="Sprite07/Button7" to="Sprite07" method="_on_button_7_pressed"]
[connection signal="pressed" from="Sprite07/Button8" to="Sprite07" method="_on_button_8_pressed"]
